@@ -51,6 +51,7 @@ A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macro
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+A.F....... [ZBX-7766] fixed webscenario status code field validation to accept user macros (Krists)
 A......... [ZBX-6834] fixed trigger.get not returning any results when using the "host" parameter (Pavels)
 A.F....... [ZBX-8190] fixed validation in API to prevent SQL errors with Oracle database when string with excessive length is stored (Krists)
 ...G...PS. [ZBX-7729] added data alignment to prevent crash on non x86 processors; thanks to Pablo Ruiz for patch (Nikolaj)
@@ -127,6 +128,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Romanian, Russian,
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+A.F....... [ZBX-7766] fixed webscenario status code field validation to accept user macros (Krists)
 ...GI..... [ZBX-8127] fixed truncation of hostname on HP-UX machines (igors)
 ........S. [ZBX-8181] fixed possible entering of "history syncer" process in an eternal loop when processing IT services (dimir)
 ..F....... [ZBX-8176] fixed SQL errors while mass operations when using Oracle database (Krists)
